improved .show movies interface and added title.  Added a back to home link to all show.erb files.  Made Sorting Functional for three catagories.

--- a/views/movies/index.erb
+++ b/views/movies/index.erb
@@ -35,6 +35,7 @@
                 <select name="order">
                   <option value="year"> Year </option>
                   <option value="rating"> Rating </option>
+                  <option value="title"> Title </option>
                 </select>
               </label>
               <input type="submit" value="Search"/>
@@ -47,6 +48,9 @@
           </li>
         <% end %>
       </ul>
+
+
+      <a href="/movies"> Back to Movies Home</a>
     </body>
   </div>
 
