--- a/views/movies/show.erb
+++ b/views/movies/show.erb
@@ -19,11 +19,10 @@
 <div class="container">
   <body>
     <ul>
-
-      <h1>Movie</h1>
-      <p>Genre: <%= @movie_info[0]['genre_name'] %></p>
-      <p>Studio: <%= @movie_info[0]['studio_name'] %></p>
-      <p>Characters: </p>
+      <p><h1>Movie:</h1> <%= @movie_info[0]['title'] %></p>
+      <p><h3>Genre:</h3> <%= @movie_info[0]['genre_name'] %></p>
+      <p><h3>Studio:</h3> <%= @movie_info[0]['studio_name'] %></p>
+      <p><h3>Characters:</h3> </p>
 
       <% @movie_info.each do |movie| %>
       <li>
@@ -32,6 +31,8 @@
       </li>
       <% end %>
     </ul>
+    <a href="/movies"> Back to Movies Home</a>
+
   </body>
 
 </div>
